--- a/src/app/member/member-index/member-index.component.css
+++ b/src/app/member/member-index/member-index.component.css
@@ -47,3 +47,67 @@
     color: #9e9e9e;
     font-weight: bold;
 }
+
+/* ///////////// */
+.btn-group .btn-danger {
+    background: transparent;
+    color: #dc3545;
+    padding: 2px 10px;
+    cursor: pointer;
+    width: 10vh;
+    font-size: 0.9rem;
+}
+
+.btn-group .btn-danger:hover {
+    background: transparent;
+    color: #dc3545;
+}
+
+.btn-group .btn-info {
+    background: transparent;
+    color: #358CC2;
+    padding: 2px 10px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    width: 10vh;
+}
+.btn-group .btn-info:hover {
+    background: transparent;
+    color: #358CC2;
+}
+
+.circle {
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    left: -12px;
+    top: -1px;
+    z-index: 11;
+}
+
+.circle-del {
+    background: #c82333;
+}
+
+.circle-edit {
+    background: #358CC2;
+}
+
+.box-two-line {
+    right: 4px;
+    margin-top: 10px;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+.action-group {
+    position: absolute; text-align: right; top: 50px; z-index: 10;
+}
+/* //////////// */
+
+.custom-control {
+    margin: 10px auto; 
+}
